--- a/test-output/emailable-report.html
+++ b/test-output/emailable-report.html
@@ -8,11 +8,13 @@
 <body>
 <table>
 <tr><th>Test</th><th># Passed</th><th># Skipped</th><th># Retried</th><th># Failed</th><th>Time (ms)</th><th>Included Groups</th><th>Excluded Groups</th></tr>
-<tr><th colspan="8">Default suite</th></tr>
-<tr><td><a href="#t0">Default test</a></td><td class="num">1</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">32,878</td><td></td><td></td></tr>
+<tr><th colspan="8">Suite</th></tr>
+<tr><td><a href="#t0">Test</a></td><td class="num">3</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">542,699</td><td></td><td></td></tr>
 </table>
-<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Default suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Default test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="1">testScripts.AddTestingCourseToMyCartTest</td><td><a href="#m0">addPythonToMyCart</a></td><td rowspan="1">1685002928371</td><td rowspan="1">22162</td></tr></tbody>
+<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="1">testScripts.AddTestingCourseToMyCartTest</td><td><a href="#m0">addPythonToMyCart</a></td><td rowspan="1">1685043428775</td><td rowspan="1">223157</td></tr><tr class="passedodd"><td rowspan="1">testScripts.AddToCartTest</td><td><a href="#m1">addToCartTest</a></td><td rowspan="1">1685043226588</td><td rowspan="1">108858</td></tr><tr class="passedeven"><td rowspan="1">testScripts.SendContactDetailsTest</td><td><a href="#m2">sendContactDetailsTest</a></td><td rowspan="1">1685043352378</td><td rowspan="1">62208</td></tr></tbody>
 </table>
-<h2>Default test</h2><h3 id="m0">testScripts.AddTestingCourseToMyCartTest#addPythonToMyCart</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h2>Test</h2><h3 id="m0">testScripts.AddTestingCourseToMyCartTest#addPythonToMyCart</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m1">testScripts.AddToCartTest#addToCartTest</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m2">testScripts.SendContactDetailsTest#sendContactDetailsTest</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
 </body>
 </html>
