--- a/test-output/index.html
+++ b/test-output/index.html
@@ -232,20 +232,20 @@ data.addRows(3);
 data.setCell(0, 0, 0)
 data.setCell(0, 1, 'addPythonToMyCart')
 data.setCell(0, 2, 'testScripts.AddTestingCourseToMyCartTest')
-data.setCell(0, 3, 93837);
+data.setCell(0, 3, 34541);
 data.setCell(1, 0, 1)
-data.setCell(1, 1, 'addToCartTest')
-data.setCell(1, 2, 'testScripts.AddToCartTest')
-data.setCell(1, 3, 11122);
+data.setCell(1, 1, 'sendContactDetailsTest')
+data.setCell(1, 2, 'testScripts.SendContactDetailsTest')
+data.setCell(1, 3, 11673);
 data.setCell(2, 0, 2)
-data.setCell(2, 1, 'sendContactDetailsTest')
-data.setCell(2, 2, 'testScripts.SendContactDetailsTest')
-data.setCell(2, 3, 10546);
+data.setCell(2, 1, 'addToCartTest')
+data.setCell(2, 2, 'testScripts.AddToCartTest')
+data.setCell(2, 3, 8433);
 window.suiteTableData['Suite']= { tableData: data, tableDiv: 'times-div-Suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 1 minutes</span>
+              <span class="suite-total-time">Total running time: 54 seconds</span>
               <div id="times-div-Suite">
               </div> <!-- times-div-Suite -->
             </div> <!-- times-div -->
@@ -278,65 +278,71 @@ return data;
               </div> <!-- configuration-class before -->
               <div class="configuration-method before">
                 <span class="method-name">methodConfig</span>
-                <span class="method-start">1726 ms</span>
+                <span class="method-start">1700 ms</span>
               </div> <!-- configuration-method before -->
               <div class="test-method">
                 <span class="method-name">addToCartTest</span>
-                <span class="method-start">7728 ms</span>
+                <span class="method-start">11828 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-method after">
                 <span class="method-name">methodTearDown</span>
-                <span class="method-start">18855 ms</span>
+                <span class="method-start">20273 ms</span>
               </div> <!-- configuration-method after -->
               <div class="configuration-class after">
                 <span class="method-name">classTearDown</span>
-                <span class="method-start">19323 ms</span>
+                <span class="method-start">20804 ms</span>
               </div> <!-- configuration-class after -->
             </div> <!-- chronological-class -->
             <div class="chronological-class">
               <div class="chronological-class-name">testScripts.SendContactDetailsTest</div> <!-- chronological-class-name -->
               <div class="configuration-class before">
                 <span class="method-name">classConfig</span>
-                <span class="method-start">19326 ms</span>
+                <span class="method-start">20806 ms</span>
               </div> <!-- configuration-class before -->
               <div class="configuration-method before">
                 <span class="method-name">methodConfig</span>
-                <span class="method-start">19412 ms</span>
+                <span class="method-start">20867 ms</span>
               </div> <!-- configuration-method before -->
               <div class="test-method">
                 <span class="method-name">sendContactDetailsTest</span>
-                <span class="method-start">23038 ms</span>
+                <span class="method-start">27419 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-method after">
                 <span class="method-name">methodTearDown</span>
-                <span class="method-start">33586 ms</span>
+                <span class="method-start">39099 ms</span>
               </div> <!-- configuration-method after -->
-              <div class="configuration-class after">
-                <span class="method-name">classTearDown</span>
-                <span class="method-start">34019 ms</span>
-              </div> <!-- configuration-class after -->
             </div> <!-- chronological-class -->
             <div class="chronological-class">
               <div class="chronological-class-name">testScripts.AddTestingCourseToMyCartTest</div> <!-- chronological-class-name -->
               <div class="configuration-class before">
                 <span class="method-name">classConfig</span>
-                <span class="method-start">34020 ms</span>
+                <span class="method-start">39635 ms</span>
               </div> <!-- configuration-class before -->
+            </div> <!-- chronological-class -->
+            <div class="chronological-class">
+              <div class="chronological-class-name">testScripts.SendContactDetailsTest</div> <!-- chronological-class-name -->
+              <div class="configuration-class after">
+                <span class="method-name">classTearDown</span>
+                <span class="method-start">39635 ms</span>
+              </div> <!-- configuration-class after -->
+            </div> <!-- chronological-class -->
+            <div class="chronological-class">
+              <div class="chronological-class-name">testScripts.AddTestingCourseToMyCartTest</div> <!-- chronological-class-name -->
               <div class="configuration-method before">
                 <span class="method-name">methodConfig</span>
-                <span class="method-start">34089 ms</span>
+                <span class="method-start">39694 ms</span>
               </div> <!-- configuration-method before -->
               <div class="test-method">
                 <span class="method-name">addPythonToMyCart</span>
-                <span class="method-start">37876 ms</span>
+                <span class="method-start">45086 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-method after">
                 <span class="method-name">methodTearDown</span>
-                <span class="method-start">131716 ms</span>
+                <span class="method-start">79628 ms</span>
               </div> <!-- configuration-method after -->
               <div class="configuration-class after">
                 <span class="method-name">classTearDown</span>
-                <span class="method-start">133210 ms</span>
+                <span class="method-start">80212 ms</span>
               </div> <!-- configuration-class after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
